b.txt
Waiting for pod gitlab-runner/runner-p3yeohxzs-project-14347-concurrent-0-tkbg7mp8 to be running, status is Pending
Running on runner-p3yeohxzs-project-14347-concurrent-0-tkbg7mp8 via generic-gitlab-runner-6dff84d4f9-dd2bk...
Getting source from Git repository
00:01
Gitaly correlation ID: 01KS2XNXTESZEYQ9V3ZW4YCR6D
Fetching changes with git depth set to 20...
Initialized empty Git repository in /builds/bems/becn/visualize/becn-dash-webui/.git/
Created fresh repository.
Checking out 5dea2c42 as detached HEAD (ref is manual_approval_deploy)...
Skipping Git submodules setup
Executing "step_script" stage of the job script
00:01
$ echo "Fetching status of the triggered pipeline bridge job..."
Fetching status of the triggered pipeline bridge job...
$ TRIGGER_STATUS=$(curl -s -k -H "PRIVATE-TOKEN: $REBUILD_TOKEN"  "https://gitlab.cbp.dhs.gov/api/v4/projects/$CI_PROJECT_ID/pipelines/$CI_PIPELINE_ID/bridges"  | python3 -c "import sys, json;  try:  # collapsed multi-line command
  File "<string>", line 1
    import sys, json;  try: 
                       ^^^
SyntaxError: invalid syntax
Uploading artifacts for failed job
00:00
Uploading artifacts...
WARNING: result.env: no matching files. Ensure that the artifact path is relative to the working directory (/builds/bems/becn/visualize/becn-dash-webui) 
ERROR: No files to upload                          
Cleaning up project directory and file based variables
00:01
ERROR: Job failed: command terminated with exit code 1
